refactor: 스쿼드 비즈니스 로직을 리팩토링합니다