@@ -1,40 +1,28 @@
 package revi1337.onsquad.squad.application.dto;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import revi1337.onsquad.category.domain.vo.CategoryType;
 import revi1337.onsquad.member.application.dto.SimpleMemberInfoDto;
-import revi1337.onsquad.squad.domain.Squad;
-import revi1337.onsquad.squad_category.domain.SquadCategory;
+import revi1337.onsquad.squad.domain.dto.SquadDomainDto;
 
 public record SquadDto(
         Long id,
         String title,
-        String content,
         int capacity,
         int remain,
-        String address,
-        String addressDetail,
-        String kakaoLink,
-        String discordLink,
         List<String> categories,
-        SimpleMemberInfoDto memberInfo
+        SimpleMemberInfoDto owner
 ) {
-    public static SquadDto from(Squad squad) {
+    public static SquadDto from(SquadDomainDto domainDto) {
         return new SquadDto(
-                squad.getId(),
-                squad.getTitle().getValue(),
-                squad.getContent().getValue(),
-                squad.getCapacity().getValue(),
-                squad.getCapacity().getRemain(),
-                squad.getAddress().getValue(),
-                squad.getAddress().getDetail(),
-                squad.getKakaoLink(),
-                squad.getDiscordLink(),
-                squad.getCategories().stream()
-                        .map(SquadCategory::getCategory)
-                        .map(category -> category.getCategoryType().getText())
-                        .collect(Collectors.toList()),
-                SimpleMemberInfoDto.from(squad.getCrewMember().getMember())
+                domainDto.id(),
+                domainDto.title().getValue(),
+                domainDto.capacity().getValue(),
+                domainDto.capacity().getRemain(),
+                domainDto.categories().stream()
+                        .map(CategoryType::getText)
+                        .toList(),
+                SimpleMemberInfoDto.from(domainDto.owner())
         );
     }
 }
